[package]
name = "slicer"
version = "0.1.0"
authors = ["Jovan <suvajacjovan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "*"
cpal = { git = "https://github.com/RustAudio/cpal.git" }
anyhow = "*"
